# MAVPlot

./: .gitignore  LICENSE  README.md  api-reference.html  app.py  cli.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  template.env
.github/workflows/: ci.yml
api/log_extractor/: index.html
api/plot_creator/: index.html
docs/api/: file_validator.md  log_extractor.md  plot_creator.md  safe_executor.md
llm/: file_validator.py  gptPlotCreator.py  log_extractor.py  safe_executor.py
mavpose/: PlotCreator.py  __init__.py  cli.py  file_validator.py  log_extractor.py  safe_executor.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/file_validator/: index.html
site/api/safe_executor/: index.html
tests/: test_extract_code_snippets.py  test_file_validator.py  test_log_extractor.py  test_safe_executor.py
