[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mavpose"
version = "0.1.0"
description = "LLM-powered MAVLink flight log analysis and plotting"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pymavlink==2.4.37",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "matplotlib==3.7.1",
    "openai>=1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.5.0",
    "tiktoken>=0.5.0",
    "python-dotenv==1.0.0",
]

[project.scripts]
mavpose = "mavpose.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mavpose"]